--- a/src/index.html
+++ b/src/index.html
@@ -126,6 +126,51 @@
         </div>
     </section>
 
+    <section class="aboutme">
+        <div class="container">
+            <div class="aboutme__wrapper">
+                <div class="aboutme__photo">
+                    <img src="img/main_photo.jpeg" alt="photo">
+                </div>
+                <div class="aboutme__descr">
+                    <h2 class="title title_fz16-black aboutme__title">Про меня</h2>
+                    <div class="title title_fz36">Меня зовут Владимир</div>
+                    <div class="divider"> </div>
+                    <p class="aboutme__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                </div>
+                <div class="aboutme__skills">
+                    <div class="aboutme__skills-item">
+                        <div class="aboutme__skills-circle">
+                            <img src="icons/about_me/web_development.svg" alt="web_development">
+                        </div>
+                        <div>
+                            <div class="title title_fz14-black">Web-разработка</div>
+                            <div class="aboutme__skills-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                        </div>
+                    </div>
+                    <div class="aboutme__skills-item">
+                        <div class="aboutme__skills-circle">
+                            <img src="icons/about_me/mobile_dev.svg" alt="mobile_dev">
+                        </div>
+                        <div>
+                            <div class="title title_fz14-black">Разработка приложений</div>
+                            <div class="aboutme__skills-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                        </div>
+                    </div>
+                    <div class="aboutme__skills-item">
+                        <div class="aboutme__skills-circle">
+                            <img src="icons/about_me/design.svg" alt="design">
+                        </div>
+                        <div>
+                            <div class="title title_fz14-black">UI/UX Design</div>
+                            <div class="aboutme__skills-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                        </div>
+                    </div>
+    
+            </div>
+        </div>
+    </section>
+
 
 
     <script src="js/script.js"></script>
